XS: Reduce code navbar. Animate button hamburguer menu. Fix navbar-collapse, jumped when collapsing.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -119,7 +119,7 @@
 
         @include col-max-360() {
           font-size: 1.2em;
-          width: 180px;
+          width: 200px;
           line-height: 22px;
         }
 
