--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -10,6 +10,12 @@
     }
   }
 
+  @include col-xs() {
+    .navbar-nav{
+      height: 100vh;
+    }
+  }
+
   #navbar{
     @include col-xs() {
       position: absolute;
@@ -58,7 +64,8 @@
       .navbar-toggle{
         padding: 0;
         right: 0;
-        top: 8px;
+        margin-right:0;
+        // top: 8px;
       }
     }
 
@@ -85,7 +92,7 @@
 
       @include col-xs() {
         .logo-horiz{
-          width: 180px;
+          width: 220px;
         }
       }
     }
@@ -144,3 +151,117 @@
     margin-top: 9px;
   }
 }
+
+
+
+#menu-hamburger {
+  width: 30px;
+  margin-top: 7px;
+  position: relative;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+
+  span {
+    display: block;
+    position: absolute;
+    height: 5px;
+    width: 100%;
+    background: #666;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+
+    &:nth-child(1) {
+      top: 0px;
+    }
+    &:nth-child(2),
+    &:nth-child(3) {
+      top: 12px;
+    }
+    &:nth-child(4){
+      top: 24px;
+    }
+  }
+
+  &.open span:nth-child(1) {
+    top: 18px;
+    width: 0%;
+    left: 50%;
+  }
+
+  &.open span:nth-child(2) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+
+  &.open span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+
+  &.open span:nth-child(4) {
+    top: 18px;
+    width: 0%;
+    left: 50%;
+  }
+}
+
+
+/* Icon 3 */
+
+// #nav-icon3 span:nth-child(1) {
+//   top: 0px;
+// }
+
+// #nav-icon3 span:nth-child(2),
+// #nav-icon3 span:nth-child(3) {
+//   top: 18px;
+// }
+//
+// #nav-icon3 span:nth-child(4) {
+//   top: 36px;
+// }
+//
+// #nav-icon3.open span:nth-child(1) {
+//   top: 18px;
+//   width: 0%;
+//   left: 50%;
+// }
+//
+// #nav-icon3.open span:nth-child(2) {
+//   -webkit-transform: rotate(45deg);
+//   -moz-transform: rotate(45deg);
+//   -o-transform: rotate(45deg);
+//   transform: rotate(45deg);
+// }
+
+// #nav-icon3.open span:nth-child(3) {
+//   -webkit-transform: rotate(-45deg);
+//   -moz-transform: rotate(-45deg);
+//   -o-transform: rotate(-45deg);
+//   transform: rotate(-45deg);
+// }
+
+// #nav-icon3.open span:nth-child(4) {
+//   top: 18px;
+//   width: 0%;
+//   left: 50%;
+// }
